appId: com.lkstudio.tonale
jsEngine: graaljs

---
- evalScript: ${output.testEmail = "e2e@test.com"}
- evalScript: ${output.testPassword = "e2etest"}
- assertVisible: "Tonalè"
- assertVisible: "Email"
- assertVisible: "Password"
- tapOn: "Create Account"
- assertVisible: "Confirm Password"
- tapOn: "Email"
- inputText: "${output.testEmail}"
- tapOn: "Password"
- inputText: "${output.testPassword}"
- hideKeyboard
- tapOn: "Confirm Password"
- inputText: "${output.testPassword}"
- hideKeyboard
- tapOn:
    id: "auth-submit-button"
- assertVisible:
    id: "name-input"
- tapOn:
    id: "name-input"
- inputText: "Test User"
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "instrument-selection"
    direction: DOWN
- tapOn:
    id: "option-piano"
- tapOn:
    id: "complete-onboarding-button"
- assertVisible:
    id: "tab-index"
