appId: com.lkstudio.tonale
jsEngine: graaljs

---
- evalScript: ${output.testEmail = "e2e@test.com"}
- evalScript: ${output.testPassword = "e2etest"}
- assertVisible: "Tonalè"
- assertVisible: "Email"
- assertVisible: "Password"
- tapOn: "Email"
- inputText: "${output.testEmail}"
- tapOn: "Password"
- inputText: "${output.testPassword}"
- hideKeyboard
- tapOn:
    id: "auth-submit-button"
- assertVisible:
    id: "tab-index"
